@amulya commited for japanese character issues Update application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,15 @@ spring.thymeleaf.suffix=.html
 #added messages for Search page
 Empty_Record_Message=No data found.
 Record_Message=records found.
+# Amulya added for japanese character ssoid purpose
+# Configure UTF-8 Encoding
+server.tomcat.uri-encoding=UTF-8
+server.tomcat.character-encoding=UTF-8
+spring.http.encoding.charset=UTF-8
 
+
+# Configure Hibernate to use UTF-8
+spring.datasource.connectionProperties=useUnicode=true;characterEncoding=utf-8;autoReconnect=true
+
+# Configure Thymeleaf to use UTF-8
+spring.thymeleaf.encoding=UTF-8
